# liblocation

./: Makefile.am  README.md  configure.ac  liblocation.pc
debian/: changelog  control  liblocation-dev.install  liblocation0.install
examples/: Makefile  basic.c  gpsd-dbus.c
src/: Makefile.am  location-distance-utils.c  location-distance-utils.h  location-gps-device.c  location-gps-device.h  location-gpsd-control.c  location-gpsd-control.h  location-misc.c  location-misc.h  location-version.h
